src/test/ui/issues/issue-38604.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/issue-38604.rs:14:13
   |
LL |     let _f: Box<dyn Foo> =
   |             ^^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: the trait cannot use `Self` as a type parameter in the supertraits or where-clauses

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/issue-38604.rs:15:9
   |
LL |         Box::new(());
   |         ^^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: the trait cannot use `Self` as a type parameter in the supertraits or where-clauses
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<std::boxed::Box<dyn Foo>>` for `std::boxed::Box<()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
